samples/_failures_safe/1761208841_fadcb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4f47271.c: In function ‘main’:
./samples/SAFE/__tmp_f4f47271.c:161:1: error: expected declaration or statement at end of input
  161 | int main() {
      | ^~~
